# AI-BE-technical-assignment

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  main.py
backend/app/: config.py  db.py  error_codes.py  exceptions.py  main.py
backend/app/apis/: __init__.py
backend/app/apis/v1/: infer.py
backend/app/clients/: embed_cache.py  openai_client.py  redis_client.py
backend/app/configs/: __init__.py  logging.py  settings.py
backend/app/models/: candidate.py  response.py
backend/app/services/: pipeline.py
backend/app/utils/: profiler.py
backend/tests/: test_config.py  test_infer.py  test_openai_client.py  test_pipeline.py
example_datas/: company_news.csv  setup_company_data.py  setup_company_news_data.py
tests/: test_infer.py
